==> CommunityGD32Cores/gigadevice-firmware-and-docs/GD32W51x/GD32W51x_RELEASE_V1.0.0/PROT/trusted-firmware-m/platform/ext/target/gdm32/gd32w51x/target_cfg.c <==
#include "cmsis.h"
#include "target_cfg.h"
#include "Driver_MPC.h"
#include "platform_retarget_dev.h"
#include "region_defs.h"
#include "tfm_plat_defs.h"
#include "region.h"
#include "bl2/include/tfm_boot_status.h"
#include "gd32w51x.h"
#include "string.h"
#include "rom_export.h"
#include "log/tfm_assert.h"
#include "log/tfm_log.h"
#define PSA_FF_TEST_SECURE_UART2
#define ARRAY_SIZE(arr) (sizeof(arr)/sizeof(arr[0]))
#define REGION(a, b, c) a##b##c
#define REGION_NAME(a, b, c) REGION(a, b, c)
#define REGION_DECLARE(a, b, c) extern uint32_t REGION_NAME(a, b, c)
#define NSCCFG_CODENSC  1
#define PERIPHERALS_BASE_NS_START (0x40000000)
#define PERIPHERALS_BASE_NS_END   (0x4FFFFFFF)
#define ENABLE_CPU0_SYSTEM_RESET_REQUEST (1U << 4U)
#define SCB_AIRCR_WRITE_MASK ((0x5FAUL << SCB_AIRCR_VECTKEY_Pos))
#define SPNIDEN_SEL_STATUS (0x01u << 7)
#define SPNIDEN_STATUS     (0x01u << 6)
#define SPIDEN_SEL_STATUS  (0x01u << 5)
#define SPIDEN_STATUS      (0x01u << 4)
#define NIDEN_SEL_STATUS   (0x01u << 3)
#define NIDEN_STATUS       (0x01u << 2)
#define DBGEN_SEL_STATUS   (0x01u << 1)
#define DBGEN_STATUS       (0x01u << 0)
#define All_SEL_STATUS (SPNIDEN_SEL_STATUS | SPIDEN_SEL_STATUS | \
                        NIDEN_SEL_STATUS | DBGEN_SEL_STATUS)
#define FF_TEST_NVMEM_REGION_START            0x102FFC00
#define FF_TEST_NVMEM_REGION_END              0x102FFFFF
#define FF_TEST_SERVER_PARTITION_MMIO_START   0x3801FC00
#define FF_TEST_SERVER_PARTITION_MMIO_END     0x3801FD00

enum tfm_plat_err_t init_debug(void)
{
    // volatile struct sysctrl_t *sys_ctrl = (struct sysctrl_t *)CMSDK_SYSCTRL_BASE_S;

#if defined(DAUTH_NONE)
    /* Set all the debug enable selector bits to 1 */
    sys_ctrl->secdbgset = All_SEL_STATUS;
    /* Set all the debug enable bits to 0 */
    sys_ctrl->secdbgclr =
                   DBGEN_STATUS | NIDEN_STATUS | SPIDEN_STATUS | SPNIDEN_STATUS;
#elif defined(DAUTH_NS_ONLY)
    /* Set all the debug enable selector bits to 1 */
    sys_ctrl->secdbgset = All_SEL_STATUS;
    /* Set the debug enable bits to 1 for NS, and 0 for S mode */
    sys_ctrl->secdbgset = DBGEN_STATUS | NIDEN_STATUS;
    sys_ctrl->secdbgclr = SPIDEN_STATUS | SPNIDEN_STATUS;
#elif defined(DAUTH_FULL)
    /* Set all the debug enable selector bits to 1 */
    sys_ctrl->secdbgset = All_SEL_STATUS;
    /* Set all the debug enable bits to 1 */
    sys_ctrl->secdbgset =
                   DBGEN_STATUS | NIDEN_STATUS | SPIDEN_STATUS | SPNIDEN_STATUS;
#else

#if !defined(DAUTH_CHIP_DEFAULT)
#error "No debug authentication setting is provided."
#endif

    /* Set all the debug enable selector bits to 0 */
    // sys_ctrl->secdbgclr = All_SEL_STATUS;

    /* No need to set any enable bits because the value depends on
     * input signals.
     */
#endif
    return TFM_PLAT_ERR_SUCCESS;
}

enum tfm_plat_err_t nvic_interrupt_enable(void)
{
    // struct spctrl_def* spctrl = CMSDK_SPCTRL;
    int32_t ret = ARM_DRIVER_OK;

    /* MPC interrupt enabling */
    ret = Driver_SRAM1_MPC.EnableInterrupt();
    if (ret != ARM_DRIVER_OK) {
        return TFM_PLAT_ERR_SYSTEM_ERR;
    }
    ret = Driver_SRAM2_MPC.EnableInterrupt();
    if (ret != ARM_DRIVER_OK) {
        return TFM_PLAT_ERR_SYSTEM_ERR;
    }
    // NVIC_EnableIRQ(MPC_IRQn);

    /* PPC interrupt enabling */
    /* Clear pending PPC interrupts */
    /* In the PPC configuration function, we have used the Non-Secure
     * Privilege Control Block to grant unprivilged NS access to some
     * peripherals used by NS. That triggers a PPC0 exception as that
     * register is meant for NS privileged access only. Clear it here
     */
    // spctrl->secppcintclr = CMSDK_APB_PPC0_INT_POS_MASK;

    /* Enable PPC interrupts for APB PPC */
    // spctrl->secppcinten |= CMSDK_APB_PPC0_INT_POS_MASK |
    //                        CMSDK_APB_PPC1_INT_POS_MASK |
    //                        CMSDK_APB_PPCEXP0_INT_POS_MASK |
    //                        CMSDK_APB_PPCEXP1_INT_POS_MASK |
    //                        CMSDK_APB_PPCEXP2_INT_POS_MASK |
    //                        CMSDK_APB_PPCEXP3_INT_POS_MASK;

    // NVIC_EnableIRQ(PPC_IRQn);

    return TFM_PLAT_ERR_SUCCESS;
}

void sau_and_idau_cfg(void)
{
    struct spctrl_def* spctrl = CMSDK_SPCTRL;
    int32_t i;
    int32_t rc;
    uint32_t mbl_start, mbl_end;

    /* Enables SAU */
    TZ_SAU_Enable();

    for (i = 0; i < ARRAY_SIZE(sau_cfg); i++) {
        SAU->RNR = i;
        SAU->RBAR = sau_cfg[i].RBAR & SAU_RBAR_BADDR_Msk;
		SAU->RLAR = (sau_cfg[i].RLAR & SAU_RLAR_LADDR_Msk) |
                    (sau_cfg[i].nsc ? SAU_RLAR_NSC_Msk : 0U) |
                    SAU_RLAR_ENABLE_Msk;
    }
    rc = get_boot_data((uint16_t)SET_TLV_TYPE(TLV_MAJOR_CORE, SET_CORE_MINOR(SYS_SAU, SAU_ENTRY_START)),
                        (uint8_t *)&mbl_start, sizeof(mbl_start));
    rc |= get_boot_data((uint16_t)SET_TLV_TYPE(TLV_MAJOR_CORE, SET_CORE_MINOR(SYS_SAU, SAU_ENTRY_END)),
                        (uint8_t *)&mbl_end, sizeof(mbl_end));
    if (rc) {
        LOG_MSG("Failed to get mbl sau setting");
    }else{
        SAU->RNR = i;
        SAU->RBAR = mbl_start & SAU_RBAR_BADDR_Msk;
        SAU->RLAR = mbl_end | SAU_RLAR_ENABLE_Msk |
                    SAU_RLAR_NSC_Msk;
    }
    /* Allows SAU to define the code region as a NSC */
    spctrl->nsccfg |= NSCCFG_CODENSC;
}
